<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpringsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/springsBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/entry_box_size"
                android:layout_marginTop="8dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/SpringsInfoBtn"
                        android:layout_width="@dimen/clickable_header_width"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/SpringsDsc"
                        android:text="@string/SpringsHeaderText"
                        android:textColor="@android:color/background_dark"
                        app:layout_constraintEnd_toStartOf="@+id/springsFrontBox"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/SpringsHeaderText" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/springsFrontBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/SpringsInfoBtn">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/spingsFrontHeader"
                                android:layout_width="@dimen/axis_header_width"
                                android:layout_height="0dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:paddingTop="@dimen/header_padding_top"
                                android:text="@string/FrontText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="@string/FrontText" />

                            <EditText
                                android:id="@+id/SpringsFrontMin"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/MinInputHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.34"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                            <EditText
                                android:id="@+id/SpringsFrontMax"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/MaxInputHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.603"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                            <EditText
                                android:id="@+id/SpringsFrontResult"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/ResultHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.91"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </android.support.constraint.ConstraintLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/springsRearBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:cardElevation="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/springsFrontBox">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/springsRearHeader"
                                android:layout_width="@dimen/axis_header_width"
                                android:layout_height="0dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:paddingTop="@dimen/header_padding_top"
                                android:text="@string/RearText"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="@string/RearText" />

                            <EditText
                                android:id="@+id/SpringsRearMin"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/MinInputHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.34"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                            <EditText
                                android:id="@+id/SpringsRearMax"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/MaxInputHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.603"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                            <EditText
                                android:id="@+id/SpringsRearResult"
                                style="@style/InputField"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:ems="10"
                                android:hint="@string/ResultHint"
                                android:inputType="numberDecimal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.912"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.0" />

                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <include
                android:id="@+id/DescriptionSection"
                layout="@layout/description_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp" />

        </LinearLayout>
</ScrollView>